Create, edit, and delete routes roundtripping, using new SensorAnomalyUpsertDto. Delete working from anomaly grid, with warning modal. Edit form created, and linked in anomaly grid. Create form created on Sensor Detail page (still need to handle some display logic).
